Fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,18 @@
 
 @layer utilities {
   .page-wrapper {
-      height: calc(100svh - 108px);
+    height: calc(100svh - 124px);
+    overflow: auto;
+    padding-bottom: 16px;
+  }
+  
+  @media screen and (min-width: 1280px) {
+    .page-wrapper {
+      height: calc(100svh - 106px);
       overflow: auto;
       padding-bottom: 16px;
-
     }
+  }
 
   .html-tag {
     font-size: 1.3rem;
@@ -62,10 +69,10 @@
     color: gray;
   }
   @media screen and (max-width: 640px) {
-      .line-contact:before {
-        left:0
-      }
+    .line-contact:before {
+      left:0
     }
+  }
 }
 
 
